back-conserve-cloud/deploy/k8s/deployment.yaml
# k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: conservecloud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: conservecloud-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
