back-conserve-cloud/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: conservecloud
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 3000
